[Liverpool] Fix map z-index issue
This makes the map appear underneath the content div.

https://github.com/mysociety/FixMyStreet-Commercial/issues/438

--- a/web/cobrands/liverpool/_liverpool.scss
+++ b/web/cobrands/liverpool/_liverpool.scss
@@ -11,6 +11,11 @@ body.liverpool {
         width: auto;
     }
 
+    &.mappage .content {
+        position: relative;
+        z-index: 10;
+    }
+
     // Don't fix the nav.
     &.mappage .nav-wrapper .nav-wrapper-2 {
         position: absolute;
